ajusta constrain com conflito

--- a/iEat/Base.lproj/Main.storyboard
+++ b/iEat/Base.lproj/Main.storyboard
@@ -24,54 +24,54 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="CuK-oB-oBn">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="CuK-oB-oBn">
                                 <rect key="frame" x="234" y="175" width="150" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="HoP-SW-nZt"/>
                                     <constraint firstAttribute="width" constant="150" id="Z1E-g2-WU5"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="ETd-mG-sVd">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="ETd-mG-sVd">
                                 <rect key="frame" x="234" y="265" width="150" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="8KZ-3Z-4FO"/>
                                     <constraint firstAttribute="height" constant="40" id="nA1-nw-50G"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="4w6-gB-aSY">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="4w6-gB-aSY">
                                 <rect key="frame" x="234" y="355" width="150" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="NRc-dx-KDh"/>
                                     <constraint firstAttribute="width" constant="150" id="o5O-iB-FCc"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="XUv-Eh-wHB">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="XUv-Eh-wHB">
                                 <rect key="frame" x="234" y="445" width="150" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Oov-O0-HgE"/>
                                     <constraint firstAttribute="height" constant="40" id="hsa-v3-uZl"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="7hg-cN-Erk">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="7hg-cN-Erk">
                                 <rect key="frame" x="234" y="535" width="150" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Ikp-sA-Jah"/>
                                     <constraint firstAttribute="width" constant="150" id="JZe-eJ-KbW"/>
                                 </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ajd-vu-JBN">
@@ -519,7 +519,6 @@
                             <constraint firstItem="iEV-56-JOE" firstAttribute="leading" secondItem="FJ2-XQ-Mbs" secondAttribute="leading" constant="20" id="B4M-rU-R1g"/>
                             <constraint firstItem="iEV-56-JOE" firstAttribute="centerX" secondItem="RUq-Va-3Na" secondAttribute="centerX" id="CiH-aF-8No"/>
                             <constraint firstItem="FJ2-XQ-Mbs" firstAttribute="trailing" secondItem="iEV-56-JOE" secondAttribute="trailing" constant="20" id="HFi-lq-unA"/>
-                            <constraint firstItem="r5H-Nb-89E" firstAttribute="leading" secondItem="FJ2-XQ-Mbs" secondAttribute="leading" constant="127" id="Omf-lB-XlC"/>
                             <constraint firstItem="r5H-Nb-89E" firstAttribute="top" secondItem="FJ2-XQ-Mbs" secondAttribute="top" constant="20" id="RCP-nF-WvV"/>
                             <constraint firstItem="FJ2-XQ-Mbs" firstAttribute="trailing" secondItem="pkT-ad-qKb" secondAttribute="trailing" constant="20" id="bOo-ss-1XT"/>
                             <constraint firstItem="FJ2-XQ-Mbs" firstAttribute="trailing" secondItem="E5t-tY-qgf" secondAttribute="trailing" constant="20" id="c9L-cb-lAs"/>
@@ -545,8 +544,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22/06/2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3p-wo-f7Y" userLabel="dtHoje">
-                                <rect key="frame" x="127.5" y="64" width="159.5" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01/01/1990" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3p-wo-f7Y" userLabel="dtHoje">
+                                <rect key="frame" x="130.5" y="64" width="153" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -637,7 +636,7 @@
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vsa-rD-5qp" userLabel="btnAtualizarPeso">
                                         <rect key="frame" x="0.0" y="116.5" width="334" height="50"/>
@@ -702,6 +701,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Perfil" id="b2Z-K7-bJb"/>
                     <connections>
+                        <outlet property="lblDate" destination="T3p-wo-f7Y" id="Pii-im-cDg"/>
                         <outlet property="lblPeso" destination="G4C-GC-Z8T" id="6hF-tL-thh"/>
                         <outlet property="pesoField" destination="H0g-YZ-uv2" id="sSs-Ic-y5f"/>
                     </connections>
@@ -851,7 +851,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="CPU-C0-uIw"/>
-        <segue reference="W7b-L4-n0g"/>
+        <segue reference="C1g-qp-sXc"/>
         <segue reference="9gB-p6-bnt"/>
     </inferredMetricsTieBreakers>
 </document>
